@@ -476,8 +476,8 @@ Usage: %s [--help]
     [--log-level=<%s>]
     [--config-file=<file>]""" % (
         sys.argv[0],
-        '|'.join([x for x in pysnmp_debug.flagMap.keys() if x != 'mibview']),
-        '|'.join([x for x in pyasn1_debug.flagMap.keys()]),
+        '|'.join([x for x in getattr(pysnmp_debug, 'FLAG_MAP', getattr(pysnmp_debug, 'flagMap', ())) if x != 'mibview']),
+        '|'.join([x for x in getattr(pyasn1_debug, 'FLAG_MAP', getattr(pyasn1_debug, 'flagMap', ()))]),
         '|'.join(log.methodsMap.keys()),
         '|'.join(log.levelsMap)
     )
